Implemented refresh token functionality on FE